# To-Do-App-GUI

./: README.md
gui/: mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  Task.cpp  Task.h  ToDoList.cpp  ToDoListApp  TodoList.h  main.cpp  todolist.txt
